fiksa spacing bug

--- a/src/App/Forside/Forside.less
+++ b/src/App/Forside/Forside.less
@@ -13,6 +13,8 @@
 
     &__tabell-container {
         display: initial;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 }
 
