--- a/src/App/Forside/InfoOmMeldepliktBoks/InfoOmMeldepliktBoks.less
+++ b/src/App/Forside/InfoOmMeldepliktBoks/InfoOmMeldepliktBoks.less
@@ -13,7 +13,7 @@
         position: relative;
 
         @media (min-width: @screen-sm) {
-            max-width: 37rem;
+            max-width: 38rem;
         }
 
         @media (min-width: @screen-md) {
